<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StoneStats</string>
    <string name="hello_world">Hello world !</string>

    <!-- Basics -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="OK">OK</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="search">Search</string>

    <!-- Classes -->
    <string name="paladin">Paladin</string>
    <string name="warrior">Warrior</string>
    <string name="hunter">Hunter</string>
    <string name="shaman">Shaman</string>
    <string name="druid">Druid</string>
    <string name="rogue">Rogue</string>
    <string name="priest">Priest</string>
    <string name="warlock">Warlock</string>
    <string name="mage">Mage</string>

    <!-- Basic menus -->
    <string name="stats">Stats</string>
    <string name="parameters">Parameters</string>
    <string name="deck_name">Deck name</string>
    <string name="add_deck">Add Deck</string>
    <string name="new_game">New Game</string>
    <string name="decks">Decks</string>
    <string name="choose_deck">My deck :</string>
    <string name="choose_class">Choose class :</string>
    <string name="coinI">Coin ?</string>
    <string name="choose_opp_class">Opp class :</string>
    <string name="result">Result :</string>s
    <string name="victory">Victory</string>
    <string name="defeat">Defeat</string>
    <string name="title_activity_add_deck">AddDeckActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_stats">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="add_opponent_cards">Add opponent cards</string>
    <string name="cards_view">Cards view</string>

    <!-- Stats -->
    <string name="winrate">Winrate</string>
    <string name="with_coin">With coin</string>
    <string name="without_coin">Without coin</string>
    <string name="nb_games">Nb games</string>
    <string name="total">Total</string>
    <string name="zero">0</string>
    <string name="nan">x</string>
    <string name="title_activity_test_actvity">TestActvity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="cost">Cost</string>

    <!-- Alerts -->
    <string name="no_deck_alert">No decks in db, please create a deck before launching a game.</string>
    <string name="delete_deck">Are you sure to delete this deck ?</string>
    <string name="confirmation">Confirmation</string>
    <string name="title_activity_launch">LaunchActivity</string>
    <string name="hello_round">Hello Round World!</string>
    <string name="hello_square">Hello Square World!</string>
    <string name="title_activity_current_game">CurrentGameActivity</string>
    
    

</resources>