<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center" >

    <Button
        android:id="@+id/newgame_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_game" />

    <Button
        android:id="@+id/deck_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decks" />

    <Button
        android:id="@+id/stats_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats" />

    <Button
        android:id="@+id/test_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parameters" />
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adMob"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-7381506339930431/8325812706" />
</RelativeLayout>
