<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/class_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/deck_name"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:hint="@string/deck_name"
                android:inputType="textCapSentences"
                android:layout_weight="0.4" />

            <Button
                android:id="@+id/add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_deck" />
        </LinearLayout>

        <ListView
            android:id="@+id/deck_list"
            android:layout_width="match_parent"
            android:layout_height="400dip"
            android:scrollbars="vertical"
            android:text="@string/hello_world" />
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adMob"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-7381506339930431/8325812706" />
</RelativeLayout>