<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:id="@+id/topVoidLL"
        android:focusable="true"
        android:orientation="vertical"
        android:focusableInTouchMode="true">
    </LinearLayout>

    <EditText
        android:id="@+id/research_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:layout_below="@id/topVoidLL"
        android:hint="@string/search"
        />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:gravity="center"
        android:id="@+id/linearLayoutCostChoice"
        android:layout_below="@id/research_edittext" >

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <RadioGroup
                android:id="@+id/cost_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/cost0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/cost1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1" />
                <RadioButton
                    android:id="@+id/cost2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2" />
                <RadioButton
                    android:id="@+id/cost3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3" />
                <RadioButton
                    android:id="@+id/cost4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4" />
                <RadioButton
                    android:id="@+id/cost5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5" />
                <RadioButton
                    android:id="@+id/cost6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="6" />
                <RadioButton
                    android:id="@+id/cost7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="7" />
                <RadioButton
                    android:id="@+id/cost8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="8+" />
            </RadioGroup>

        </HorizontalScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="0.5"
        android:id="@+id/linearLayoutLists"
        android:layout_below="@id/linearLayoutCostChoice"
        android:layout_above="@+id/validate_button"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <ListView
                android:id="@+id/list_all_cards"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:scrollbars="vertical"
                android:text="@string/hello_world" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <ListView
                android:id="@+id/list_deck_cards"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:scrollbars="vertical"
                android:text="@string/hello_world" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/validate_button"
        android:text="@string/OK"
        android:layout_above="@+id/adMob"/>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adMob"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-7381506339930431/8325812706" />
</RelativeLayout>